Reworked logic, added new exception, added tests.